tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/fn-ptr-is-not-structurally-matchable.stderr
error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon
  --> $DIR/fn-ptr-is-not-structurally-matchable.rs:41:14
   |
LL |     const CFN1: Wrap<fn()> = Wrap(trivial);
   |     ---------------------- constant defined here
...
LL |         Wrap(CFN1) => count += 1,
   |              ^^^^ can't be used in patterns
   |
   = note: see https://github.com/rust-lang/rust/issues/70861 for details

error: aborting due to 1 previous error

